# ignovo

./: Cargo.toml  LICENSE  README.md
scripts/: generate_averagine.py
src/: align.rs  deconvolution.rs  graph.rs  main.rs  novoviz.rs  peptide_search.rs
src/data/: averagine.txt
src/static/: deconvolution.html  graph.html
